# pymap-admin

./: .buildinfo  .coveragerc  .flake8  .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pymapadmin.commands.html  pymapadmin.html  pyproject.toml  requirements-all.txt  requirements-dev.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: python-check.yml  python-package.yml  python-publish.yml
_modules/: index.html  pymapadmin.html
_modules/pymapadmin/: commands.html  local.html  operation.html  typing.html
_modules/pymapadmin/commands/: base.html  health.html  mailbox.html  system.html  user.html
_static/: documentation_options.js
doc/source/: conf.py  index.rst  pymapadmin.commands.rst  pymapadmin.rst
pymapadmin/: __about__.py  __init__.py  config.py  local.py  main.py  operation.py  typing.py
pymapadmin/client/: append.py  command.py  mailbox.py  main.py  ping.py  system.py  user.py
pymapadmin/commands/: __init__.py  base.py  health.py  load.py  mailbox.py  system.py  user.py
pymapadmin/grpc/: README.md  admin.proto  admin.py  admin_grpc.py  admin_pb2.py  admin_pb2.pyi  error_details_grpc.py  error_details_pb2.py  error_details_pb2.pyi  grpc_tools.protoc-args  health_grpc.py  health_pb2.py  health_pb2.pyi
tasks/: __init__.py  lint.py  proto.py
test/: client.py  handler.py  requirements.txt  stub.py  test_append.py  test_health.py  test_mailbox.py  test_ping.py  test_system.py  test_user.py  test_version.py
